<!--
  ~ Copyright (c) 2016. UGIF. All Rights Reserved
  -->

<resources>
    <string name="app_name">BikeNavi</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAIgZSrU7fGx4iVj7zTeq6NUM0o3a3AHSk</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_check">비밀번호 확인</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_link_to_register">회원이 아닙니까? 지금 가입하세요.</string>
    <string name="btn_link_to_login">이미 회원이십니까? 로그인하세요! </string>
    <string name="updated_ui">ui가 업데이트 됨</string>
    <string name="location_updated_message">위치 변경됨</string>
    <string name="btn_delete">삭제</string>
    <string name="welcome">환영합니다.</string>
    <string name="text_email">이메일 뜨는 곳</string>
    <string name="btn_logout">로그아웃</string>
    <string name="menu_login">로그인</string>
    <string name="menu_logout">로그아웃</string>
    <string name="action_settings">설정</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="ip">아이피를 입력해주세요</string>
    <string name="server_client_id">350817727456-nkfgl6mkjvs6lmlhfl7smlegfthup433.apps.googleusercontent.com</string>
    <string name="kakao_app_key">f05a9a9912388ce712ea3590ff8cde24</string>
    <string name="facebook_app_id">1781547618751472</string>

    <!--메인 엑티비티와 검색 액티비티간 화면전환 애니메이션에 필요한 변수 선언들-->
    <string name="name_purpose_search_point">장소 검색 목적</string>
    <string name="current_point_poi_for_transition">현재입력된 장소 POI</string>
    <string name="current_track_for_transition">현재 경로 Track</string>
    <string name="current_point_text_for_transition">현재입력된 장소 텍스트</string>
    <string name="start_point_text_for_transition">출발 장소 이름</string>
    <string name="dest_point_text_for_transition">도착 장소 이름</string>
    <string name="wgs_84_x">위도</string>
    <string name="wgs_84_y">경도</string>
    <string name="searchview_transition_name">장소검색창전환</string>
    <string name="name_bookmark_button">즐겨찾기</string>

    <string name="remaining_inttype_distance">%1$dm</string>
    <string name="remaining_doubletype_distance">%1$fm</string>

    <!--지도 액티비티에 필요한 변수-->
    <string name="hint_start_point">출발 장소를 입력하세요</string>
    <string name="hint_destination">도착 장소를 입력하세요</string>
    <string name="hint_search_point">검색할 장소를 입력하세요</string>
    <string name="detail_route">상세 경로</string>
    <string name="mycurrentpoint">현재 위치</string>
    <string name="descript_map_dummy_view">더미 지도 뷰</string>
    <string name="openDrawer">열기</string>
    <string name="closeDrawer">닫기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--네비게이션 지도 레이아웃-->
    <string name="first_turn_guide">첫번째 턴가이드</string>
    <string name="second_turn_guide">두번째 턴가이드</string>
    <string name="third_turn_guide">세번째 턴가이드</string>
    <string name="big_turn_guide">큰 턴가이드</string>

</resources>
