<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. UGIF. All Rights Reserved
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_track"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nagnek.bikenavi.TrackActivity">

    <com.nagnek.bikenavi.customview.BorderTextView
        android:id="@+id/track_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="트랙 로그"
        app:textStroke="true"
        app:textStrokeWidth="10"
        app:textStrokeColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:id="@+id/mapViewFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/track_log"
        android:layout_marginBottom="72dp">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            tools:layout="@layout/dummy_map_fragment" />

        <LinearLayout
            android:id="@+id/guid_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>
                <!--첫번째 턴 가이드-->
                <LinearLayout
                    android:id="@+id/firstFutureGuideLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/firstTurnGuide"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/first_turn_guide" />

                    <com.nagnek.bikenavi.customview.BorderTextView
                        android:id="@+id/firstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:textStroke="true"
                        app:textStrokeWidth="10"
                        app:textStrokeColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/secondFutureGuideLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <!--두번째 턴 가이드-->
                    <ImageView
                        android:id="@+id/secondTurnGuide"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/second_turn_guide" />

                    <com.nagnek.bikenavi.customview.BorderTextView
                        android:id="@+id/secondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:textStroke="true"
                        app:textStrokeWidth="10"
                        app:textStrokeColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thirdFutureGuideLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <!--세 번째 턴 가이드-->
                    <ImageView
                        android:id="@+id/thirdTurnGuide"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/third_turn_guide"/>

                    <com.nagnek.bikenavi.customview.BorderTextView
                        android:id="@+id/thirdText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thirdTurnGuide"
                        app:textStroke="true"
                        app:textStrokeWidth="10"
                        app:textStrokeColor="@color/white"/>
                </LinearLayout>

            </LinearLayout>
            <!--가이드 표시-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bigTurnGuide"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/big_turn_guide"/>

                <com.nagnek.bikenavi.customview.BorderTextView
                    android:id="@+id/guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:textStroke="true"
                    app:textStrokeWidth="10"
                    app:textStrokeColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:behavior_hideable="false"
            app:behavior_peekHeight="72dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <com.nagnek.bikenavi.customview.BorderTextView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                app:textStroke="true"
                app:textStrokeWidth="10"
                app:textStrokeColor="@color/white"
                android:text="@string/detail_route"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_play_arrow_black_24dp"
            app:layout_anchor="@+id/bottom_sheet"
            app:layout_anchorGravity="top|right" />


    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
