<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. UGIF. All Rights Reserved
  -->


<!-- The main content view -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nagnek.bikenavi.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <FrameLayout
                android:id="@+id/start_point_search_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_start_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--flagNoExtractUtil : 입력창이 전체화면으로 가려지는것을 막음-->
                    <!--actionSearch : 키보드의 엔터가 검색으로 글자가 바뀜-->
                    <com.nagnek.bikenavi.customview.DelayAutoCompleteTextView
                        android:id="@+id/start_point"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/hint_start_point"
                        android:imeOptions="flagNoExtractUi|actionSearch"
                        android:inputType="textCapSentences"
                        android:transitionName="@string/searchview_transition_name"/>

                </android.support.design.widget.TextInputLayout>


                <ProgressBar
                    android:id="@+id/pb_loading_indicator1"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone" />
            </FrameLayout>


            <FrameLayout
                android:id="@+id/dest_point_search_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/start_point_search_frame_layout">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_dest_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.nagnek.bikenavi.customview.DelayAutoCompleteTextView
                        android:id="@+id/dest_point"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/hint_destination"
                        android:imeOptions="flagNoExtractUi|actionSearch"
                        android:inputType="textCapSentences"
                        android:transitionName="@string/searchview_transition_name"/>
                </android.support.design.widget.TextInputLayout>

                <ProgressBar
                    android:id="@+id/pb_loading_indicator2"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/mapViewFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/dest_point_search_frame_layout"
                android:layout_marginBottom="72dp">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    tools:layout="@layout/dummy_map_fragment">
                </fragment>
            </FrameLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:id="@+id/bottom_sheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:behavior_hideable="false"
                    app:behavior_peekHeight="72dp"
                    app:layout_behavior="@string/bottom_sheet_behavior">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@string/detail_route"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                    <FrameLayout
                        android:id="@+id/fragment_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_anchor="@+id/bottom_sheet"
                    app:layout_anchorGravity="top|right" />


            </android.support.design.widget.CoordinatorLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#111">
        </ListView>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
